--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <span class="ms-3">profile</span>
                     </a>
                 </li>
-                <li class="p-3 pb-2">
+                <li class="p-3">
                     <a href="#" class="text-light d-flex align-items-center text-decoration-none">
                         <i class="fa-regular fa-file-lines"></i>
                         <span class="ms-3">More</span>
@@ -131,6 +131,49 @@
                             <p class="text-light">please like this video and subscribe to codezilla.
                             </p>
                         </div>
+                    </div>
+                    <div class="post-icon text-white-50 d-flex align-items-center">
+                        <i class="fa-regular fa-message"></i>
+                        <i class="fa-solid fa-rotate"></i>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-upload"></i>
+                    </div>
+                    <hr>
+                    <div class="post3  d-flex align-items-center">
+                        <img class="img-fluid rounded-circle" src="images/profile-pic.png" alt>
+                        <div class="post-info mt-3 py-3">
+                            <h4 class=" text-light fs-5 mb-1">Islam Mahfouz
+                                <span class="text-white-50 fs-6">@codezilla_ .1h</span>
+                            </h4>
+                            <p class="text-light">please like this video and subscribe to codezilla.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="post-icon text-white-50 d-flex align-items-center">
+                        <i class="fa-regular fa-message"></i>
+                        <i class="fa-solid fa-rotate"></i>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-upload"></i>
+                    </div>
+                    <hr>
+                    <div class="post2 d-flex align-items-center">
+                        <img class="img-fluid rounded-circle" src="images/profile-pic.png" alt>
+                        <div class="post-info mt-3 py-3">
+                            <h4 class=" text-light fs-5 mb-1">Islam Mahfouz
+                                <span class="text-white-50 fs-6">@codezilla_ .1h</span>
+                            </h4>
+                            <p class="text-light">please like this video and subscribe to codezilla
+                                please like this video and subscribe to codezilla please please like this video and subscribe to codezilla,
+                                please like this video and subscribe to codezilla
+                                please like this video and subscribe to codezilla
+                            </p>
+                        </div>
+                    </div>
+                    <div class="post-icon text-white-50 d-flex align-items-center">
+                        <i class="fa-regular fa-message"></i>
+                        <i class="fa-solid fa-rotate"></i>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-upload"></i>
                     </div>
         </div>
     </section>
